# fibonacci_server

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  dependencies.py  main.py
app/fibonacci/: exceptions.py  fibonacci.py  routes.py  views.py
app/fibonacci/tests/: test_fibonacci.py
