[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["HarIgo23 <igorn2304@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
gunicorn = "^20.1.0"
aioredis = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
