[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["HarIgo23 <igorn2304@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
gunicorn = "^20.1.0"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
redis = "^4.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
